--- a/style.css
+++ b/style.css
@@ -1,26 +1,27 @@
-.parrafo {
-  color: green;
-  font-size: 45px;
-  font-family: 'Explora', cursive;
+@import url(assets/css/header.css);
+@import url(assets/css/main.css);
+@import url(assets/css/footer.css);
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Dancing+Script:wght@400..700&display=swap");
+
+* {
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.parrafo_2 {
-  color: blueviolet;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+:root {
+	font-size: 16px;
 
-.playa {
-  border-style: double;
-  border-color: darkgreen;
-  border-width: 5px;
+	/* CSS HSL */
+	--charcoal: hsla(203, 37%, 22%, 1);
+	--pumpkin: hsla(24, 99%, 59%, 1);
+	--sunglow: hsla(44, 97%, 63%, 1);
+	--olivine: hsla(90, 34%, 63%, 1);
+	--zomp: hsla(162, 23%, 49%, 1);
 }
-.simpsons {
-  border-radius: 15px;
-  border-style: dashed groove;
-  border-color: red;
-  border-width: 4px;
-  width: 300px
-  
+.img_fondo{
+    z-index: -1;
+    width: 100vmax;
+    height: auto;
+    position: fixed;
+    opacity: .2;
 }
-
-.simpsons {width: 50px;}
